--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
+  <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
+  <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -59,35 +62,29 @@
 
 </section>
 
-<section class="form2 cid-snrby0ROkc mbr-fullscreen" id="form2-13">
-
+<section class="form8 cid-snre54bRsw" id="form8-15">
     
-
     
-    <div class="align-center container">
-        <div class="row justify-content-center">
+    <div class="container-fluid">
+        <div class="mbr-section-head">
+            <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Get in Touch</strong></h3>
+            <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-2 display-7">Fill the form below to get quote.</h4>
+        </div>
+        <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ke95CNdfl44p9qHIjzpxrUHqHUBQD4VQcWCUc8ROCHp5Kep9kEpso3hBaix3+Ayadn0LW3VlGPg3v8FcDb8pVOqmklN/Q0PlTfgatWzJ138zP4OtuHY7dAecO4lDQsLu">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KUd/AnoUriYyM9sPg/W+eIMP/T/OOtjUUGQy8y0We9TqnSGy6qGRcz3llyCP/431q870qhGBH7vHZ8pyKz2d5xBMJkx8+Z58iISHvYQfzQwOGUSp013DVhebFlQqhVD3">
                     <div class="row">
-                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you
-                            we'll get back soon!</div>
-                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
-                            problem!</div>
+                        <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+                        <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
                     </div>
                     <div class="dragArea row">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <h1 class="mbr-section-title mb-4 display-2"><strong>Get in Touch</strong></h1>
+                        <div class="col-lg-4 col-md-12 col-sm-12 form-group" data-for="name">
+                            <input type="text" name="name" placeholder="Company Name" data-form-field="name" class="form-control" value="" id="name-form8-15">
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <p class="mbr-text mbr-fonts-style mb-5 display-7">Fill the form below to get quote.</p>
+                        <div class="col-lg-4 col-md-12 col-sm-12 form-group" data-for="email">
+                            <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control" value="" id="email-form8-15">
                         </div>
-                        <div class="col-lg col-md col-12 form-group" data-for="email">
-                            <input type="text" name="name" placeholder="Company Name" data-form-field="name" class="form-control" id="name-form2-13">
-                        </div>
-                        <div class="col-lg col-md col-12 form-group" data-for="email">
-                            <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control" id="email-form2-13">
-                        </div>
-                        <div class="mbr-section-btn col-md-auto col"><button type="submit" class="btn btn-black display-4">Send</button></div>
+                        <div class="col-lg-4 col-md-12 col-sm-12 mbr-section-btn align-center"><button type="submit" class="btn btn-black display-4">Submit</button></div>
                     </div>
                 </form>
             </div>
@@ -110,7 +107,7 @@
             </div>
         </div>
     </div>
-
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://simbastorage.com/" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;"</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
